          'set_short_alias_for_uri'.
    - Cache:
      - 'get_pin' method: divided into 'get_original_apt_pin' and 'get_pin'
        methods.
      - New 'get_index_entries' method.
      - New 'get_path_of_release_list' method.
      - New 'get_path_of_index_list' method.
      - New 'get_download_entries_of_index_list' method.
      - New 'get_download_uri_of_release_list' method.
    - Config:
      - Added configuration option 'dpkg::options'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 29 May 2009 00:48:30 +0300

cupt (0.1.4) unstable; urgency=low

  * cupt:
    - 'policy' subcommand:
      - Fixed old code referrings to 'gettext'.
    - Fixed skipping option-like arguments when searching for a command.
    - Implemented option '--show-reasons' for management actions.
    - New 'copyright' subcommand, similar to 'changelog' subcommand. Currently
      implemented only for installed packages and official Debian and Ubuntu
      repositories.
    - 'changelog', 'copyright' subcommands: work around dropping an epoch from
      version strings in links to Debian/Ubuntu pages.
    - The option '--install-unpacked' went away in favor of new
      '--no-install-unpacked' one, installing unpacked packages is now the
      default.
  * Cupt:
    - System:
      - Resolver:
        - Fixed erroneous autovivification of package entries which are not
          installed when checking for sticks of candidate versions than can
          satisfy forward dependencies.
        - Fixed wrong sharing 'fake satisfied' entries between package entries
          in different solution branches.
        - Honor 'cupt::resolver::track-reasons' configuration option.
      - Worker:
        - APT mangles ':' chars in names of deb archives. Cupt doesn't do the
          same. So, to pick up debs downloaded by libapt, worker now generates
          symlinks from 'right' names to 'mangled' names whenever possible.