@@ -607,6 +607,11 @@ standard error
 boolean (0/1), if true, worker will print some debug information to the
 standard error
 
+=item debug::gpgv
+
+boolean (0/1), if true, cache will print some debug information while verifying
+signatures to the standard error
+
 =back
 
 =head1 DEFINITIONS
